Updating views and JS

--- a/shoppinglist/templates/lists/create_form.html
+++ b/shoppinglist/templates/lists/create_form.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row">
     <div class="col-xs-12">
-            <h1>Create new list</h1>
+            <h1 id="page-title">Create new list</h1>
         </div>
 	<div class="col-sm-6">
         <h1>{{ mylist.name }}</h1>
