--- a/shoppinglist/core/static/core/style.less
+++ b/shoppinglist/core/static/core/style.less
@@ -1,7 +1,16 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 100px;
+  padding-top: 50px;
   padding-bottom: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#page-title {
+	margin-top: 50px;
+}
+
+.alert {
+	margin-top: 20px;
 }
 
 
@@ -21,10 +30,31 @@ ul#mylists {
 	    background-color: #337ab7;
 	}
 
-	.bg-success:hover {
-		color: #fff;
-	    background-color: #91c37d;
+	.bg-success {
+
+		a {
+			color: #333;
+
+			&:hover {
+				color: #333;
+			}
+		}
+
+		&:hover {
+			color: #fff;
+		    background-color: #91c37d;
+
+		    a {
+		    	color: #fff;
+
+		    	&:hover {
+		    		color: #fff;
+		    	}
+		    }
+		}
+
 	}
+
 }
 
 .bg-success {
@@ -44,6 +74,8 @@ ul#mylists {
 }
 
 #item-edit-form {
+
+	margin-top: 50px;
 
 	.form-inline {
 		margin-bottom: 10px;
@@ -82,13 +114,17 @@ ul#mylists {
 		.form-title {
 			font-size: 36px;
 			padding-left: 12px;
-			height: 44px;
+			height: 60px;
+			margin-bottom: 10px;
 		}
 	}
 
-	
-
 	.delete-item-button {
 		display: none;
+		margin-right: 5px;
+	}
+
+	#add-item-button {
+		margin-left: 20px;
 	}
 } 
