--- a/shoppinglist/templates/base.html
+++ b/shoppinglist/templates/base.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet/less" type="text/css" href="{% static 'core/style.less' %}" />
     <!-- Less script - TODO Development only -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
+
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
     
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
