--- a/shoppinglist/templates/lists/item_form.html
+++ b/shoppinglist/templates/lists/item_form.html
@@ -16,21 +16,24 @@
                     {% for form in list_formset %}    
                         {{ form.id }}
                         {{ form.name }}
+                        <button type="button" class="btn btn-primary edit-item-button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Edit item</span></button>
                         <a class="btn btn-danger delete-item-button" href="{% url 'lists:delete' form.id.value %}" role="button">Delete list</a>
                     {% endfor %}
                 </div>
             </div>
             <ul>
     		    {% for form in item_formset %}
-                <li class='form-section'>
+                <li class='form-section original-item'>
                     <div class="form-inline">
                         <div class="form-group">
                             {{ form.id }}
                             {{ form.name }}
                             {{ form.DELETE }}
+                            <button type="button" class="btn btn-primary edit-item-button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Edit item</span></button>
                             <button type="button" class="btn btn-danger delete-item-button"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Delete item</span></button>
+
                             {% if forloop.last %}
-                                 <button id="addItemButton" type="button" class="btn btn-success">Add Item <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Add Item</span></button>
+                                 <button id="add-item-button" type="button" class="btn btn-success">Add Item <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Add Item</span></button>
                             {% endif %}
                         </div>
                     </div>
