--- a/shoppinglist/templates/lists/mylists.html
+++ b/shoppinglist/templates/lists/mylists.html
@@ -5,16 +5,16 @@
 {% block content %}
 	<div class="row">
 		<div class="col-xs-12">
-			<h1>My Lists</h1>
+			<h1 id="page-title">My Lists</h1>
 		</div>
-		<div class="col-sm-6">
+		<div class="col-xs-12 col-sm-6">
 			<ul id="mylists">
 				{% if mylists %}
 		    		{% for list in mylists %}
 				    	<li class="bg-info">{{ list.name }}<a class="pull-right btn btn-info edit-list-button" href="{% url 'lists:edit' list.id %}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Edit List</span></a></li>
 		    		{% endfor %}
 		    	{% endif %}
-	    		<li class="bg-success">Create New List<a class="pull-right btn btn-success edit-list-button" href="{% url 'lists:create' %}" role="button"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Create New List</span></a></a></li>
+	    		<li class="bg-success"><a href="{% url 'lists:create' %}">Create New List</a><a class="pull-right btn btn-success edit-list-button" href="{% url 'lists:create' %}" role="button"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Create New List</span></a></a></li>
 	    	</ul>
 		</div>
 	</div>
