--- a/shoppinglist/templates/pages/home.html
+++ b/shoppinglist/templates/pages/home.html
@@ -6,9 +6,13 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Log in with Google to get started &raquo;</a></p>
+        <h1>Lists</h1>
+        <p>Going shopping? Need a list? Do it here!</p>
+        {% if request.oauth.credentials.id_token %}
+          <p><a class="btn btn-primary btn-lg" href="{% url 'lists:mylists' %}" role="button">See My Lists &raquo;</a></p>
+        {% else %}
+          <p><a class="btn btn-primary btn-lg" href="{% url 'google_oauth:authorize' %}" role="button">Log in with Google to get started &raquo;</a></p>
+        {% endif %}
       </div>
     </div>
 {% endblock %}
