compile less to min.css

--- a/shoppinglist/templates/base.html
+++ b/shoppinglist/templates/base.html
@@ -17,9 +17,7 @@
     <link rel="stylesheet" href="{% static 'core/bootstrap/css/bootstrap.min.css' %}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet/less" type="text/css" href="{% static 'core/style.less' %}" />
-    <!-- Less script - TODO Development only -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="{% static 'core/style.min.css' %}" />
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
