--- a/shoppinglist/templates/pages/home.html
+++ b/shoppinglist/templates/pages/home.html
@@ -20,7 +20,17 @@
 {% block content %}
 <div class="row">
     <div class="col-xs-12">
-		<p>Lists / list Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>An example shopping list application for a Google Apprenticeship in Digital Innovation application.</p>
+    <h3>Project Brief: Option 2 - App Engine</h3>
+    <p>Build a simple webapp, using google app engine that provides users with an ability to keep track of a shopping list</p>
+    <p>Should be written in Python, Go, or Java.</p>
+    <ul>
+      <li>User must be able to add, delete and edit an item to the shopping list</li>
+      <li>User must be able to view their whole shopping list</li>
+      <li>User must be able to delete their whole shopping list (in addition to deleting individual items)</li>
+      <li>Each user must be able to login with their Google account and their shopping list must persist between their logins</li>
+    </ul>
+    <p><a href="https://github.com/joehalloran/shoppinglist_project" target="_blank">View source code here</a></p>
 	</div>
 </div>
 {% endblock %}
