--- a/shoppinglist/templates/base.html
+++ b/shoppinglist/templates/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{% static 'core/bootstrap/css/bootstrap.min.css' %}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet/less" type="text/css" href="{% static 'core/style.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/style.min.css' %}" />
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
