--- a/shoppinglist/templates/lists/mylists.html
+++ b/shoppinglist/templates/lists/mylists.html
@@ -11,7 +11,13 @@
 			<ul id="mylists">
 				{% if mylists %}
 		    		{% for list in mylists %}
-				    	<li class="bg-info">{{ list.name }}<a class="pull-right btn btn-info edit-list-button" href="{% url 'lists:edit' list.id %}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Edit List</span></a></li>
+				    	<li class="bg-info">
+					    	{{ list.name }}
+					    	<div class="pull-right">
+						    	<a class="btn btn-info edit-list-button" href="{% url 'lists:edit' list.id %}" role="button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Edit List</span></a>
+						    	<a class="btn btn-danger delete-list-button" href="{% url 'lists:delete' list.id %}?redirect=mylists" role="button"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Delete item</span></a>
+					    	</div>
+				    	</li>
 		    		{% endfor %}
 		    	{% endif %}
 	    		<li class="bg-success"><a href="{% url 'lists:create' %}">Create New List</a><a class="pull-right btn btn-success edit-list-button" href="{% url 'lists:create' %}" role="button"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span><span class="sr-only sr-only-focusable">Create New List</span></a></a></li>
