CORS config and other minor changes

--- a/shoppinglist/core/static/core/style.less
+++ b/shoppinglist/core/static/core/style.less
@@ -120,6 +120,12 @@ ul#mylists {
 			height: 60px;
 			margin-bottom: 10px;
 		}
+
+		&:last-child {
+			.edit-item-button {
+				margin-right: 20px;
+			}
+		}
 	}
 
 	.delete-item-button {
@@ -127,7 +133,4 @@ ul#mylists {
 		margin-right: 5px;
 	}
 
-	#add-item-button {
-		margin-left: 20px;
-	}
 } 
