--- a/shoppinglist/static/core/style.less
+++ b/shoppinglist/static/core/style.less
@@ -55,6 +55,9 @@ ul#mylists {
 
 	}
 
+	.delete-list-button {
+		margin-left: 15px;
+	}
 }
 
 .bg-success {
@@ -117,6 +120,12 @@ ul#mylists {
 			height: 60px;
 			margin-bottom: 10px;
 		}
+
+		&:last-child {
+			.edit-item-button {
+				margin-right: 20px;
+			}
+		}
 	}
 
 	.delete-item-button {
@@ -124,7 +133,4 @@ ul#mylists {
 		margin-right: 5px;
 	}
 
-	#add-item-button {
-		margin-left: 20px;
-	}
 } 
