--- a/shoppinglist/templates/base.html
+++ b/shoppinglist/templates/base.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             {% if request.oauth.credentials.id_token %}
               <li><a href="{% url 'lists:mylists' %}">My Lists</a></li>
-              <li><a href="{% url 'lists:create' %}"">Create New List</a></li>
+              <li><a href="{% url 'lists:create' %}"">Create New List <span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Hi {{ request.oauth.credentials.id_token.given_name }} {{ request.oauth.credentials.id_token.family_name }} <span class="caret"></span></a>
                 <ul class="dropdown-menu">
